iptables-rules.txt
# Generated by iptables-save v1.8.13 (nf_tables) on Fri Aug  7 18:12:39 2026
*filter
:INPUT DROP [60:9468]
:FORWARD DROP [0:0]
:OUTPUT DROP [3512:260501]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-FORWARD
-A FORWARD -s 192.168.1.0/24 -d 192.168.2.129/32 -p tcp -m tcp --dport 80 -m conntrack --ctstate NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.2.129/32 -d 192.168.1.0/24 -p tcp -m tcp --sport 80 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 53 -j ACCEPT
-A OUTPUT -p udp -m udp --sport 53 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
# Completed on Fri Aug  7 18:12:39 2026
# Generated by iptables-save v1.8.13 (nf_tables) on Fri Aug  7 18:12:39 2026
